Fixed spacing

--- a/css/home.css
+++ b/css/home.css
@@ -31,7 +31,7 @@
 	border-radius: 30px;
 }
 .work-space{
-	margin-top: 50px;
+	margin-top: 70px;
 }
 .page-footer{
     background-color:  #45D1D1 !important; 
